# claw-sdk

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml  publish-go.yml  publish-python.yml  publish-rust.yml  publish-typescript.yml  publish.yml
adapters/anthropic/: README.md  package.json
adapters/anthropic/src/: index.ts
adapters/anthropic/src/__tests__/: anthropic.test.ts
adapters/google-genai/: README.md  package.json
adapters/google-genai/src/: index.ts
adapters/google-genai/src/__tests__/: google-genai.test.ts
adapters/langchain/: README.md  package.json
adapters/langchain/src/: index.ts
adapters/langchain/src/__tests__/: langchain.test.ts
adapters/langchain/src/memory/: clawdb-chat-memory.ts
adapters/langchain/src/retrievers/: clawdb-retriever.ts
adapters/langchain/src/tools/: clawdb-tools.ts
adapters/openai/: README.md  package.json
adapters/openai/src/: index.ts
adapters/openai/src/__tests__/: openai.test.ts
adapters/openai/src/handlers/: index.ts
adapters/openai/src/middleware/: index.ts
adapters/openai/src/tools/: index.ts
adapters/openclaw/: README.md  package.json  vitest.config.ts
adapters/openclaw/src/: index.ts
adapters/openclaw/src/__tests__/: openclaw.test.ts
adapters/vercel-ai/: README.md  package.json
adapters/vercel-ai/src/: index.ts
adapters/vercel-ai/src/__tests__/: vercel-ai.test.ts
adapters/vercel-ai/src/hooks/: use-clawdb.ts
adapters/vercel-ai/src/middleware/: index.ts
adapters/vercel-ai/src/tools/: index.ts
docs/: MIGRATION.md
sdks/cli-wrapper/: README.md  package.json  tsup.config.ts
sdks/cli-wrapper/src/: index.ts
sdks/cli-wrapper/src/commands/: auth.ts  branch.ts  config.ts  dev.ts  init.ts  memory.ts  reflect.ts  status.ts  sync.ts
sdks/cli-wrapper/src/utils/: config.ts  output.ts
sdks/go/: README.md  branches.go  clawdb.go  clawdb_test.go  config.go  errors.go  go.mod  go.sum  health.go  httpclient.go  memory.go  options.go  provision.go  reflect.go  session.go  session_client.go  sync.go  transactions.go  types.go
sdks/go/examples/basic/: main.go
sdks/mcp-adapter/: README.md  package.json  tsup.config.ts
sdks/mcp-adapter/src/: index.ts
sdks/python/: Makefile  README.md  pyproject.toml
sdks/python/clawdb/: __init__.py  _mock_stub.py  _transport.py  async_client.py  branches.py  client.py  config.py  errors.py  memory.py  models.py  provision.py  reflect.py  session.py  sync_client.py  transactions.py
sdks/python/clawdb/_proto/: __init__.py
sdks/python/clawdb/integrations/: __init__.py  langchain.py  mcp.py  openai_agents.py
sdks/python/src/clawdb/: __init__.py
sdks/python/tests/: test_async_client.py  test_entrypoint.py  test_provision.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: builder.rs  client.rs  error.rs  lib.rs  models.rs
sdks/rust/tests/: integration_test.rs
sdks/typescript/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdks/typescript/proto/: clawdb.proto
sdks/typescript/src/: batch.ts  branch.client.ts  client.ts  config.ts  core.ts  index.ts  internal.ts  memory.client.ts  reflect.client.ts  session.client.ts  streaming.ts  sync.client.ts  transport.ts  types.ts
sdks/typescript/src/__tests__/: auth.test.ts  branch.test.ts  client.test.ts  core.test.ts  events.test.ts  memory.test.ts  typecheck.test.ts
sdks/typescript/src/auth/: api-key.ts  index.ts  jwt.ts  middleware.ts  session.ts
sdks/typescript/src/config/: env.ts  file.ts  index.ts  merge.ts  schema.ts
sdks/typescript/src/schema/: define.ts  generate.ts  index.ts  migrations.ts
sdks/typescript/test-types/: sdk-signatures.test-d.ts
tests/integration/: package.json  typescript.test.ts  vitest.config.ts
