[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawdb"
version = "0.1.1"
description = "Zero-config database for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "database", "memory", "clawdb", "langchain", "openai", "grpc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "grpcio>=1.60.0",
  "grpcio-tools>=1.60.0",
  "protobuf>=4.25.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "tenacity>=8.2.0",
  "httpx>=0.27.0",
  "structlog>=24.2",
]

[project.optional-dependencies]
async = ["grpcio>=1.64"]
langchain = ["langchain-core>=0.2"]
openai = ["openai>=1.30"]

[tool.hatch.build.targets.wheel]
packages = ["clawdb"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.4",
  "grpc-stubs>=1.53",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
type-check = "mypy clawdb/"
format = "ruff format clawdb/ tests/"
lint = "ruff check clawdb/ tests/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

